# BitNet

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  bit_attention.py  bit_ffn.py  bit_linear_new.py  bit_mamba.py  bit_moe_example.py  bitnet_transformer.py  example.py  huggingface_example.py  inference.py  kernel_test.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tests.py  train.py  transformer_example.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code_quality_control.yml  cos_integration.yml  docs.yml  docs_test.yml  lints.yml  pr_request_checks.yml  pull-request-links.yml  pylint.yml  python-publish.yml  quality.yml  ruff.yml  run_test.yml  stale.yml  test.yml  testing.yml  unit-test.yml  welcome.yml
Docs/: README_EN.md  README_JP.md
bitnet/: __init__.py  at.py  bit_attention.py  bit_ffn.py  bit_linear.py  bit_linear_new.py  bit_llama.py  bit_lora.py  bit_mamba.py  bit_moe.py  bit_transformer.py  bitbnet_b158.py  bitffn.py  bitlinear.py  inference.py  main.py  one_bit_vision_transformers.py  replace_hf.py  straight_through_estimator.py  transformer.py
docs/: architecture.md  bounties.md  contributing.md  demos.md  design.md  faq.md  flywheel.md  hiring.md  index.md  metric.md  purpose.md  research.md  roadmap.md
docs/applications/: customer_support.md  (+1 more)
examples/: bit_attention.py  bit_mamba.py  one_bit_vit.py
kernel/: gemm_lowbit.cpp  gemm_lowbit_kernel.cu
tests/: test_bitffn.py  test_bitlinear.py  test_transformer.py  tests.py
(+37 files in other folders)
